prevent visuallyhidden inputs from making page jump when focused

--- a/scss/core/generic/utilities/mixins/_accessibility.scss
+++ b/scss/core/generic/utilities/mixins/_accessibility.scss
@@ -1,13 +1,13 @@
 /*------------------------------------*\
     $ACCESSIBILITY
 \*------------------------------------*/
-@mixin accessibility{
+@mixin accessibility {
   border:0;
   clip:rect(0 0 0 0);
   height:1px;
   margin:-1px;
   overflow:hidden;
   padding:0;
-  position: absolute;
+  position: fixed;
   width:1px;
 }
